# insensitive

./: .buildconfig  .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  com.klausboldt.insensitive.json  configure  configure.ac  insensitive-config.h.in  meson.build
build-aux/meson/: postinstall.py
data/: Makefile.am  Makefile.in  com.klausboldt.insensitive.appdata.xml.in  com.klausboldt.insensitive.desktop.in  com.klausboldt.insensitive.gschema.xml  com.klausboldt.insensitive.mime.xml  meson.build
data/doc/: Makefile.am  Makefile.in  abbreviations.html  adiabatic_pulse.html  antiphase_magnetization.html  apt.html  bird_tango.html  chemical_shift.html  coherence_pathways.html  coherence_transfer.html  coherences.html  commandline.html  convolution_theorem.html  cosyqf.html  coupling.html  cpmg.html  decoupling.html  default.html  density_matrix.html  dept.html  dipolar_coupling.html  dqf_cosy.html  ecos3ph.html  energy_levels.html  equation_of_motion.html  fid.html  flip_angle.html  fourier_transformation.html  gradients.html  group_theory.html  gyromagnetic_ratio.html  help_keywords  hilbert_space.html  hmbclpndqf.html  hmqcqf.html  hsqcph.html  hxcoqf.html  inad1d.html  index.html  ineptnd.html  (+61 more)
data/icons/: Makefile.am  Makefile.in  meson.build
data/icons/hicolor/128x128/apps/: Makefile.am  Makefile.in
data/icons/hicolor/128x128/mimetypes/: Makefile.am  Makefile.in
data/icons/hicolor/16x16/actions/: Makefile.am  Makefile.in
data/icons/hicolor/16x16/apps/: Makefile.am  Makefile.in
data/icons/hicolor/16x16/mimetypes/: Makefile.am  Makefile.in
data/icons/hicolor/24x24/actions/: Makefile.am  Makefile.in
data/icons/hicolor/24x24/apps/: Makefile.am  Makefile.in
data/icons/hicolor/256x256/apps/: Makefile.am  Makefile.in
data/icons/hicolor/256x256/mimetypes/: Makefile.am  Makefile.in
data/icons/hicolor/32x32/actions/: Makefile.am  Makefile.in
data/icons/hicolor/32x32/apps/: Makefile.am  Makefile.in
data/icons/hicolor/32x32/mimetypes/: Makefile.am  Makefile.in
data/icons/hicolor/48x48/actions/: Makefile.am  Makefile.in
data/icons/hicolor/512x512/apps/: Makefile.am  Makefile.in
data/icons/hicolor/64x64/apps/: Makefile.am  Makefile.in
examples/: 13C_decoupled.ipp  13C_inverse_gated_decoupling.ipp  1H.ipp  1_Spin.iss  2_Spins_A2.iss  2_Spins_AB.iss  2_Spins_AX.iss  2_Spins_heteronuclear.iss  3_Spins_A2X.iss  3_Spins_A3.iss  3_Spins_AMX-2.iss  3_Spins_AMX.iss  3_Spins_AX+A.iss  3_Spins_H-C-C.iss  3_Spins_heteronuclear.iss  4_Spins_1,1-difluoroallene.iss  4_Spins_1,1-difluoroethylene.iss  4_Spins_A4.iss  4_Spins_AABB.iss  4_Spins_AAXX.iss  4_Spins_ABMX.iss  4_Spins_ABXY.iss  4_Spins_INADEQUATE.iss  ABMX_1D.igg  ABMX_COSY-45.igg  ABMX_COSY.igg  ABMX_DQF-COSY.igg  ABMX_E.COSY.igg  ABMX_SECSY.igg  ABMX_TOCSY.igg  ABMX_TQF-COSY.igg  ABMX_z-COSY.igg  AMX-2_1D.igg  AMX-2_COSY-45.igg  AMX-2_COSY.igg  AMX-2_J-resolved.igg  AMX-2_ROESY.igg  AMX-2_Relayed_COSY.igg  AMX-2_SCOSY.igg  AMX-2_SECSY.igg  (+65 more)
m4/: ChangeLog  ax_blas.m4
macosx/: ._install-jhbuild.sh  Info.plist  Insensitive.bundle  Insensitive.icns  igg.icns  insensitive.modules  install-jhbuild.sh  ipp.icns  iss.icns  settings.ini
macosx/Catalina/: index.theme
macosx/Catalina/gtk-3.0/: gtk.css
po/: ChangeLog  ChangeLog~  LINGUAS  Makefile.in.in~  Makevars  POTFILES.in  meson.build
src/: Makefile.am  Makefile.in  insensitive-composer-row.ui  insensitive-composer.c  insensitive-composer.h  insensitive-composer.ui  insensitive-controller.c  insensitive-controller.h  insensitive-library.c  insensitive-library.h  insensitive-preferences.c  insensitive-preferences.h  insensitive-preferences.ui  insensitive-pulsesequence.c  insensitive-pulsesequence.h  insensitive-pulseshaper.c  insensitive-pulseshaper.h  insensitive-pulseshaper.ui  insensitive-settings.c  insensitive-settings.h  insensitive-singlespins.c  insensitive-singlespins.h  insensitive-singlespins.ui  insensitive-spinsystem.c  insensitive-spinsystem.h  insensitive-tutorial.c  insensitive-tutorial.h  insensitive-tutorial.ui  insensitive-window.c  insensitive-window.h  insensitive-window.ui  insensitive.gresource.xml  insensitive.h  levmarq.c  levmarq.h  main.c  meson.build
