## Process this file with automake to generate a Makefile.in

docdir = $(datadir)/@PACKAGE@/doc

doc_DATA = 10.1002_cmr.a.20203.pdf \
	abbreviations.html \
	adiabatic_pulse.html \
	animation.png \
	antiphase_magnetization.html \
	apt.html \
	bird_tango.html \
	chemical_shift.html \
	chemicalShift.png \
	coherence_pathways.html \
	coherences.html \
	coherence_transfer.html \
	commandline.html \
	convolution_theorem.html \
	cosyqf.html \
	coupling.html \
	coupling.png \
	cpmg.html \
	decoupling.html \
	default.html \
	density_matrix.html \
	dept.html \
	dipolar_coupling.html \
	dqf_cosy.html \
	ecos3ph.html \
	energy_levels.html \
	equation_of_motion.html \
	equilibrium.png \
	fid.html \
	flip_angle.html \
	formula_2ixiy_matrix.png \
	formula_2ixiz_matrix.png \
	formula_2iziz_matrix.png \
	formula_adiabatic_pulse.png \
	formula_autocorrelation_exponential.png \
	formula_autocorrelation.png \
	formula_auto_relaxation.png \
	formula_auto_relaxation_roe.png \
	formula_basis_vectors.png \
	formula_bloch.png \
	formula_boltzmann.png \
	formula_bra.png \
	formula_chemical_shift.png \
	formula_coherence_vectors.png \
	formula_commutator.png \
	formula_convolution.png \
	formula_convolution_theorem.png \
	formula_cossinidentity.png \
	formula_coupling.png \
	formula_coupling_strong.png \
	formula_coupling_tensor.png \
	formula_coupling_weak.png \
	formula_cross_relaxation.png \
	formula_cross_relaxation_roe.png \
	formula_cs_anisotropy.png \
	formula_cs_field.png \
	formula_cyclic_commutation.png \
	formula_de_broglie.png \
	formula_density_basis.png \
	formula_density_matrix_trace.png \
	formula_density_operator.png \
	formula_density_simplified.png \
	formula_determinant_algebra.png \
	formula_determinant.png \
	formula_diagonal_matrix.png \
	formula_diffusion_fit.png \
	formula_dipolar_coupling_constant.png \
	formula_direct_product.png \
	formula_dot_product.png \
	formula_eigenequation.png \
	formula_eigenvalue_equation.png \
	formula_eigenvector.png \
	formula_equation_of_motion_natural.png \
	formula_equation_of_motion.png \
	formula_ernst_angle.png \
	formula_euler_identity.png \
	formula_expectation_value.png \
	formula_exponential_decomposition.png \
	formula_exponential_operator.png \
	formula_fourier_transformation.png \
	formula_gaussian.png \
	formula_gaussian_width.png \
	formula_heisenberg.png \
	formula_heteronuclear_dipolar_coupling.png \
	formula_hilbert_eigenvalue.png \
	formula_homonuclear_dipolar_coupling.png \
	formula_i2x_matrix.png \
	formula_ialpha_matrix.png \
	formula_ibeta_matrix.png \
	formula_identity_matrix.png \
	formula_imag_lorentzian.png \
	formula_iminus_matrix.png \
	formula_inner_product.png \
	formula_inner_product_rules.png \
	formula_inversion_recovery.png \
	formula_iplus_matrix.png \
	formula_ix_matrix.png \
	formula_iy_matrix.png \
	formula_iz_matrix.png \
	formula_ket_bra.png \
	formula_ket.png \
	formula_larmor_frequency.png \
	formula_liouville_derivative.png \
	formula_liouville_equation.png \
	formula_liouville_hamiltonian.png \
	formula_lorentz_gauss.png \
	formula_lorentzian.png \
	formula_matrix_decomposition.png \
	formula_matrix_element.png \
	formula_matrix_multiplication.png \
	formula_matrix.png \
	formula_mixed_states.png \
	formula_multi_quantum_coherence.png \
	formula_normalization.png \
	formula_norm.png \
	formula_omega_eff.png \
	formula_omega_zero.png \
	formula_operator_group.png \
	formula_phase_shift.png \
	formula_planck_energy.png \
	formula_precession_matrix.png \
	formula_principal_cs_tensor.png \
	formula_pseudoecho.png \
	formula_pulse_matrix.png \
	formula_pulse_tilt.png \
	formula_real_lorentzian.png \
	formula_rotational_operator.png \
	formula_rotation_sandwich.png \
	formula_schroedinger_equation.png \
	formula_schroedinger_natural.png \
	formula_secular_dipolar_coupling_constant.png \
	formula_signal_intensity.png \
	formula_singlet.png \
	formula_solomon_equation.png \
	formula_solomon_equation_roe.png \
	formula_spectral_density.png \
	formula_spin_matrix.png \
	formula_spin_orientation.png \
	formula_spin.png \
	formula_strong_coupling_delta.png \
	formula_strong_coupling_parameter.png \
	formula_strong_matrix.png \
	formula_superoperator.png \
	formula_T1.png \
	formula_t1_relaxation.png \
	formula_T2_1QT.png \
	formula_T2_2QT.png \
	formula_t2_relaxation.png \
	formula_T2_ZQT.png \
	formula_taylor_series.png \
	formula_tppi.png \
	formula_transformation_matrix.png \
	formula_transition_probability.png \
	formula_transition_probability_xi.png \
	formula_triplet.png \
	formula_two_spin_relaxation_matrix.png \
	formula_vector_states.png \
	formula_W0_transition.png \
	formula_W1_transition.png \
	formula_W2_transition.png \
	formula_weak_coupling.png \
	formula_weak_exponential.png \
	formula_weak_matrix.png \
	formula_weighted_ensemble.png \
	formula_window_cosine.png \
	formula_window_exp.png \
	formula_window_hann.png \
	formula_window_hann_weighted.png \
	formula_window_sinebell.png \
	formula_window_traf_E.png \
	formula_window_traf_epsilon.png \
	formula_window_traf.png \
	formula_window_trafs.png \
	formula_window_triangle.png \
	formula_xi.png \
	fourier_transformation.html \
	freeEvolution.png \
	gradient.png \
	gradients.html \
	group_theory.html \
	gyromagnetic_ratio.html \
	help_keywords \
	hilbert_space.html \
	hmbclpndqf.html \
	hmqcqf.html \
	hsqcph.html \
	hxcoqf.html \
	img_antiphase_peaks.png \
	img_chemical_shift.png \
	img_cosy_1D.png \
	img_cosy_folded_artifacts.png \
	img_cosy_folded.png \
	img_cosy.png \
	img_cosy_states.png \
	img_cross_polarization.png \
	img_density_matrix_display.png \
	img_dept_angle.png \
	img_dqfcosy_states.png \
	img_dwell_time.png \
	img_eburp.png \
	img_ecosy.png \
	img_energylevels_equivalent.png \
	img_energylevels_strong.png \
	img_energylevels_weak.png \
	img_excitation_profile.png \
	img_FFT2D_FF.png \
	img_FFT2D_Ft.png \
	img_FFT2D_tt.png \
	img_ft_comb.png \
	img_ft_gauss.png \
	img_ft_lorenzian.png \
	img_ft_sincos.png \
	img_ft_sinc.png \
	img_gradient.png \
	img_jresolved_skewed.png \
	img_matrix_composer.png \
	img_noe.png \
	img_noe_roe.png \
	img_pake_pattern.png \
	img_poplenotation.png \
	img_powder_pattern.png \
	img_presentation.png \
	img_polarised_pulse.png \
	img_pulse_sequence.png \
	img_pulsesequence.png \
	img_pulse_shaper.png \
	img_relaxation_times.png \
	img_resolution.png \
	img_roofing_effect.png \
	img_scalar_coupling.png \
	img_secsy_cosy.png \
	img_secsy.png \
	img_secsy_skewed.png \
	img_ses_h.png \
	img_ses_hx.png \
	img_ses.png \
	img_ses_x.png \
	img_single_spin_module.png \
	img_singlet_relaxation.png \
	img_singlet_store.png \
	img_spectrometer_photo.png \
	img_spectrometer.png \
	img_spectrum_1D.png \
	img_spectrum_2D.png \
	img_spectrumdisplay_2D.png \
	img_spectrumdisplay.png \
	img_spherical_harmonics.png \
	img_spinlock.png \
	img_spin_network_editor.png \
	img_spinstate.png \
	img_spin_system_homonuclear.png \
	img_spinsystem.png \
	img_tabbar.png \
	img_three_level.png \
	img_toolbar.png \
	img_two_level.png \
	img_vector_model.png \
	img_vectors_2IxSx.png \
	img_vectors_2IxSy.png \
	img_vectors_2IzSz.png \
	img_vectors_antiphase.png \
	img_vectors_coupling.png \
	img_vectors_Ix.png \
	img_vectors_Iy.png \
	img_vectors_Iz.png \
	img_vectors_precession.png \
	img_vectors_pulse.png \
	inad1d.html \
	index.html \
	ineptnd.html \
	InsensitiveIcon.png \
	j_resolved.html \
	larmor_frequency.html \
	license.html \
	limitations.html \
	lineshapes.html \
	literature.html \
	longitudinal_two_spin_order.html \
	manual.html \
	matrix_diagonalization.html \
	matrix.html \
	matrix_multiplication.html \
	matrix_operators.html \
	meson.build \
	mlevph.html \
	multi_quantum_coherence.html \
	noe.html \
	noesyph.html \
	pendant.html \
	phase_cycling.html \
	phase.html \
	pople_notation.html \
	populations.html \
	pp_2D_experiment.png \
	pp_apt.png \
	pp_bird.png \
	pp_cosyqf.png \
	pp_cpmg.png \
	pp_dept.png \
	pp_dqfcosy_gradients.png \
	pp_dqfcosy.png \
	pp_gcosy.png \
	pp_gradient_dqc.png \
	pp_hahn_echo.png \
	pp_hmbclpndqf.png \
	pp_hmqcqf.png \
	pp_hsqcph.png \
	pp_hxcoqf.png \
	pp_inad1d.png \
	pp_ineptnd.png \
	pp_ineptrd.png \
	pp_jmod.png \
	pp_jresolved.png \
	pp_mlevph.png \
	pp_noesyph.png \
	pp_pendant.png \
	pp_relayed_cosy.png \
	pp_roesyph.png \
	pp_secsyqf.png \
	pp_singlet_triplet.png \
	pp_stegp1f.png \
	pp_t1ir1d.png \
	pp_tango.png \
	pp_zcosy.png \
	pp_zfilter.png \
	pp_zg.png \
	precession.html \
	presentation.html \
	processing_two_dimensional_spectra.html \
	product_operator_formalism.html \
	pulse.html \
	pulse.png \
	pulse_sequence_manual.html \
	pulse_sequences.html \
	pure_phase_spectra.html \
	quantum_mechanics.html \
	relaxation.html \
	relaxation.png \
	relayed_cosy.html \
	roesyph.html \
	rotating_frame.html \
	secsyqf.html \
	settings.html \
	shaped_pulses.html \
	single_quantum_coherence.html \
	single_spins.html \
	singlet_triplet_basis.html \
	solid_state_nmr.html \
	spectrometer.html \
	spectrum.html \
	spectrum_resolution.html \
	spherical_tensors.html \
	spin_echo_sandwich.html \
	spineditor.html \
	spin.html \
	spin_lock.html \
	spin_manipulation.html \
	stegp1f.html \
	styles.css \
	t1ir1d.html \
	trosy.html \
	two_dimensional_spectra.html \
	undo.png \
	vector_model.html \
	window_function.html \
	zfilter.html \
	zg.html

EXTRA_DIST = $(doc_DATA) meson.build

install-data-local: $(doc_DATA)
	$(mkinstalldirs) $(docdir)
	for file in $(top_builddir)/data/doc/*.html $(top_builddir)/data/doc/*.css $(top_builddir)/data/doc/*.png $(top_builddir)/data/doc/*.pdf; do \
	basefile=`basename $$file`; \
	$(INSTALL_DATA) $(top_builddir)/data/doc/$$file $(docdir)/$$basefile; \
	done
